--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 #logo{
-    height: 60px ;
+    height: 100px ;
 }
 
 img{
@@ -21,10 +21,12 @@ a:hover{
 }
 
 #navbar{
-    height: 60px;
-    width: 80vw;
+    height: 100px;
+    width: 100%;
     display: flex;
     align-items: center;
+    z-index: 1000;
+    background-color: white;
 }
 
 #signin{
@@ -50,7 +52,8 @@ a:hover{
 
 #image {
     float: right;
-    background-image: url("Home image 3.avif");
+    position: absolute;
+    
     background-size: contain;
     background-repeat: no-repeat;
     margin-top: 60px;
@@ -65,6 +68,29 @@ button:hover{
 }
 
 marquee{
-    behavior:"alternate";
     direction:"left";
+}
+pre{
+    font-family: sans-serif;
+    font-style: italic;
+}
+
+header {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 100px; 
+  position: sticky;
+}
+
+body {
+  margin: 0;
+  padding-top: 100vh; 
+}
+
+.newline{
+    text-align: center;
+}
+.container{
+    display: flex;
 }
